--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ script: "rake"
 gemfile: Gemfile
 
 matrix:
+  allow_failures:
+    - rvm: 1.9.3
+      env: PUPPET_VERSION="~> 2.7.0"
   exclude:
     - rvm: 2.1.0
       env: PUPPET_VERSION="~> 2.7.0"
